fix bootstrap container overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,12 +31,11 @@ body {
 
 section {
   height: 100vh;
-  padding:2rem;
-  p
+  padding: 2rem;
 }
 
 .text-center {
-  text-align: center !important;
+  text-align: left !important;
 }
 
 .section-title {
@@ -486,6 +485,11 @@ h3 {
 }
 
 @media (max-width: 768px) {
+  section {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
   .about-content {
     flex-direction: column;
     justify-content: center;
